--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "myProject",
+  "name": "my-project",
   "version": "0.0.1",
   "description": "My amazing project.",
-  "main": "app.coffee",
+  "main": "app.js",
   "devDependencies": {
     "babelify": "^6.0.2",
     "browserify": "^10.0.0",
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "update-framer": "curl -o framer/framer.js http://builds.framerjs.com/latest/framer.js && curl -o framer/framer.js.map http://builds.framerjs.com/latest/framer.js.map",
-    "start": "NODE_PATH=./modules budo app.coffee:bundle.js --live --port 3000 -- --transform coffeeify --transform babelify --extension .coffee | garnish",
-    "build": "NODE_PATH=./modules browserify --transform coffeeify --transform babelify --extension .coffee app.coffee > bundle.js"
+    "start": "NODE_PATH=./modules budo app.js:bundle.js --live --port 3000 -- --transform coffeeify --transform babelify --extension .coffee | garnish",
+    "build": "NODE_PATH=./modules browserify --transform coffeeify --transform babelify --extension .coffee app.js > bundle.js"
   }
 }
