--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "browserify": "^10.0.0",
     "budo": "^4.0.0",
     "coffeeify": "^1.1.0",
-    "garnish": "^2.1.3"
+    "garnish": "^2.1.3",
+    "through2": "^0.6.5"
   },
   "scripts": {
     "update-framer": "curl -o framer/framer.js http://builds.framerjs.com/latest/framer.js && curl -o framer/framer.js.map http://builds.framerjs.com/latest/framer.js.map",
