--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "browserify": "^10.0.0",
     "budo": "^4.0.0",
     "coffeeify": "^1.1.0",
-    "garnish": "^2.1.3",
-    "through2": "^0.6.5"
+    "framerify": "peteschaffner/framerify",
+    "garnish": "^2.1.3"
   },
   "scripts": {
     "update-framer": "curl -o framer/framer.js http://builds.framerjs.com/latest/framer.js && curl -o framer/framer.js.map http://builds.framerjs.com/latest/framer.js.map",
-    "start": "NODE_PATH=./modules budo app.js:bundle.js --live --port 3000 -- --transform ./framer/framer_path_transform.js --transform coffeeify --transform babelify --extension .coffee | garnish",
-    "build": "NODE_PATH=./modules browserify --transform ./framer/framer_path_transform.js --transform coffeeify --transform babelify --extension .coffee app.js > bundle.js"
+    "start": "NODE_PATH=./modules budo app.js:bundle.js --live --port 3000 -- --transform framerify --transform coffeeify --transform babelify --extension .coffee | garnish",
+    "build": "NODE_PATH=./modules browserify --transform framerify --transform coffeeify --transform babelify --extension .coffee app.js > bundle.js"
   }
 }
