--- a/.jshintrc
+++ b/.jshintrc
@@ -1,19 +1,9 @@
 {
   "asi": true,
-  "browser": true,
-  "browserify": true,
+  "node": true,
   "esnext": true,
   "forin": true,
   "latedef": "nofunc",
   "supernew": true,
-  "unused": true,
-
-  "globals": {
-    "Framer": true,
-    "Layer": true,
-    "Utils": true,
-    "BackgroundLayer": true,
-    "Canvas": true,
-    "Screen": true
-  }
+  "unused": true
 }
