--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
   },
   "dependencies": {
     "babelify": "^6.0.2",
-    "budo": "^4.0.0",
+    "browserify": "^10.2.0",
+    "chokidar": "^1.0.1",
     "coffeeify": "^1.1.0",
     "commander": "^2.8.1",
+    "connect": "^3.3.5",
+    "connect-livereload": "^0.5.3",
     "framer-module": "peteschaffner/framer-module",
     "framer-project": "peteschaffner/framer-project",
-    "framerify": "peteschaffner/framerify",
     "fs-extra": "^0.18.3",
-    "sync-request": "^2.0.1"
+    "serve-index": "^1.6.4",
+    "serve-static": "^1.9.3",
+    "sync-request": "^2.0.1",
+    "through2": "^0.6.5",
+    "tiny-lr": "^0.1.5"
   }
 }
