--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
   "name": "framer-cli",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A Framer.js CLI for quickly building modular prototypes.",
-  "repository": "peteschaffner/framer-cli",
+  "author": {
+    "name": "Pete Schaffner",
+    "email": "pjschaffner@gmail.com"
+  },
+  "homepage": "https://github.com/peteschaffner/framer-cli",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/peteschaffner/framer-cli.git"
+  },
+  "keywords": [
+    "prototyping",
+    "framerjs"
+  ],
+  "license": "MIT",
   "bin": {
-    "framer": "./bin/framer.js"
+    "framer": "bin/framer.js"
   },
   "dependencies": {
     "babelify": "^6.0.2",
@@ -15,8 +28,8 @@
     "commander": "^2.8.1",
     "connect": "^3.3.5",
     "connect-livereload": "^0.5.3",
-    "framer-module": "peteschaffner/framer-module",
-    "framer-project": "peteschaffner/framer-project",
+    "framer-module": "^0.1.0",
+    "framer-project": "^0.1.0",
     "fs-extra": "^0.18.3",
     "serve-index": "^1.6.4",
     "serve-static": "^1.9.3",
