--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "serve-static": "^1.9.3",
     "sync-request": "^2.0.1",
     "through2": "^0.6.5",
-    "tiny-lr": "^0.1.5"
+    "tiny-lr": "^0.1.5",
+    "watchify": "^3.2.1"
   }
 }
